--- a/package.json
+++ b/package.json
@@ -11,5 +11,14 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Divya6110/BMI_Calculator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Divya6110/BMI_Calculator/issues"
+  },
+  "homepage": "https://github.com/Divya6110/BMI_Calculator#readme"
 }
